--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "autoprefixer": "10.4.20",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.8",
+    "fast-sort": "^3.4.1",
     "next": "14.2.8",
     "postcss": "8.4.45",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "tailwindcss": "3.4.10",
     "typescript": "5.5.4"
+  },
+  "devDependencies": {
+    "daisyui": "^4.12.10"
   }
 }
