--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "fast-sort": "^3.4.1",
     "next": "14.2.8",
     "postcss": "8.4.45",
+    "prisma": "^5.19.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "tailwindcss": "3.4.10",
-    "typescript": "5.5.4"
+    "typescript": "5.5.4",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "daisyui": "^4.12.10"
