--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.19.1",
     "@types/node": "22.5.4",
     "@types/react": "18.3.5",
@@ -18,6 +19,8 @@
     "eslint-config-next": "14.2.8",
     "fast-sort": "^3.4.1",
     "next": "14.2.8",
+    "next-auth": "^4.24.7",
+    "next-cloudinary": "^6.13.0",
     "postcss": "8.4.45",
     "prisma": "^5.19.1",
     "react": "18.3.1",
