--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "@types/react": "18.3.5",
     "@types/react-dom": "18.3.0",
     "autoprefixer": "10.4.20",
+    "bcrypt": "^5.1.1",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.8",
     "fast-sort": "^3.4.1",
-    "next": "14.2.8",
+    "next": "^14.2.13",
     "next-auth": "^4.24.7",
     "next-cloudinary": "^6.13.0",
     "postcss": "8.4.45",
@@ -30,6 +31,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "daisyui": "^4.12.10"
   }
 }
