--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "preview-email": "email dev -p 3030"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.19.1",
+    "@react-email/components": "0.0.25",
     "@types/node": "22.5.4",
     "@types/react": "18.3.5",
     "@types/react-dom": "18.3.0",
@@ -26,12 +28,15 @@
     "prisma": "^5.19.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "resend": "^1.0.0",
     "tailwindcss": "3.4.10",
     "typescript": "5.5.4",
+    "unirest": "^0.6.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
-    "daisyui": "^4.12.10"
+    "daisyui": "^4.12.10",
+    "react-email": "^1.10.1"
   }
 }
